# nfc-writer

./: README.md  main.py  pyproject.toml
util/: nfcutil.py  qrutil.py
