[project]
name = "nfc-writer"
version = "0.1.0"
description = "simple CLI tool with rich output to write data into NFC tags"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nfcpy>=1.0.4",
    "opencv-python>=4.10.0.84",
    "rich>=13.8.1",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.6",
]
